--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "iconv-lite": "^0.4.15",
+    "innosetup-compiler": "^5.5.9",
+    "node-webkit-updater": "^0.3.3",
     "nw-builder": "^3.2.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
