--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "http-proxy-middleware": "^0.17.3",
     "iconv-lite": "^0.4.15",
     "innosetup-compiler": "^5.5.9",
-    "nw-builder": "^3.2.0",
+    "nw-builder": "^3.4.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
@@ -68,7 +68,7 @@
     "last 2 Chrome versions"
   ],
   "main": "http://localhost:8080",
-  "manifestUrl": "/upgrade/upgrade.json",
+  "manifestUrl": "http://localhost:8080/releases/upgrade.json",
   "window": {
     "title": "vue-nw-seed",
     "toolbar": false,
